Extension Managers View

--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/ui/common/navigation/navigation.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/ui/common/navigation/navigation.component.html
@@ -90,6 +90,14 @@
                             <i class="fa fa-list-alt primary-color mr-2"></i>
                             Parameter Contexts
                         </button>
+                        <button
+                            mat-menu-item
+                            class="global-menu-item"
+                            [routerLink]="['/extensions-manager']"
+                            [disabled]="!user.controllerPermissions.canRead">
+                            <i class="fa fa-plug primary-color mr-2"></i>
+                            Extensions Manager
+                        </button>
                         @if (clusterSummary()?.clustered) {
                             <button
                                 mat-menu-item
