NIFI-15353: Adding support for rendering Connector Documentation. (#10683)
* NIFI-15353: Adding support for rendering Connector Documentation.

* NIFI-15353: Addressing review feedback.

* NIFI-15353: Using mergeMap instead of switchMap to allow for concurrent doc loading.

This closes #10683

--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/documentation/feature/documentation.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/documentation/feature/documentation.component.html
@@ -125,6 +125,19 @@
                                     }
                                 "></ng-container>
                         </mat-expansion-panel>
+                        <mat-expansion-panel [expanded]="connectorsExpanded">
+                            <mat-expansion-panel-header>
+                                <mat-panel-title>Connectors</mat-panel-title>
+                            </mat-expansion-panel-header>
+                            <ng-container
+                                *ngTemplateOutlet="
+                                    extensionLinks;
+                                    context: {
+                                        $implicit: filterExtensions((connectorTypes$ | async)!),
+                                        componentType: ComponentType.Connector
+                                    }
+                                "></ng-container>
+                        </mat-expansion-panel>
                     </mat-accordion>
                     <ng-template #extensionLinks let-extensionTypes let-componentType="componentType">
                         @if (extensionTypes.length === 0) {
